--- a/Python/Python_data_science/np03.ipynb
+++ b/Python/Python_data_science/np03.ipynb
@@ -434,6 +434,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### where"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 실습"
    ]
   },
