--- a/Python/Python_data_science/np04_실습1.ipynb
+++ b/Python/Python_data_science/np04_실습1.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -431,34 +431,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['1960' '99']\n",
+      "[['2016' '137']\n",
+      " ['2015' '120']\n",
+      " ['1948' '117']\n",
+      " ['1943' '117']\n",
+      " ['1939' '116']\n",
+      " ['1932' '115']\n",
+      " ['1975' '113']\n",
+      " ['1976' '112']\n",
+      " ['1941' '111']\n",
+      " ['1998' '111']\n",
+      " ['1921' '111']\n",
+      " ['1949' '110']\n",
+      " ['2017' '110']\n",
+      " ['1977' '109']\n",
+      " ['1999' '109']\n",
+      " ['1937' '108']\n",
+      " ['2003' '108']\n",
+      " ['1970' '108']\n",
+      " ['1920' '107']\n",
+      " ['1930' '106']\n",
+      " ['2018' '106']\n",
+      " ['1988' '104']\n",
+      " ['1968' '104']\n",
+      " ['1919' '104']\n",
+      " ['1983' '103']\n",
+      " ['1967' '103']\n",
+      " ['1982' '102']\n",
+      " ['2019' '102']\n",
+      " ['1963' '102']\n",
+      " ['1955' '102']\n",
+      " ['1946' '101']\n",
+      " ['1954' '101']\n",
+      " ['1966' '100']\n",
+      " ['1991' '100']\n",
+      " ['2002' '100']\n",
+      " ['1960' '99']\n",
       " ['2012' '99']\n",
       " ['1972' '98']\n",
       " ['1971' '97']\n",
       " ['1950' '96']\n",
       " ['1989' '95']\n",
       " ['1993' '95']\n",
-      " ['1924' '94']\n",
-      " ['1961' '94']\n",
       " ['1979' '94']\n",
+      " ['1961' '94']\n",
+      " ['1924' '94']\n",
       " ['1956' '93']\n",
-      " ['1958' '93']\n",
-      " ['2014' '93']\n",
       " ['1929' '93']\n",
-      " ['1974' '92']\n",
+      " ['2014' '93']\n",
+      " ['1958' '93']\n",
       " ['1925' '92']\n",
       " ['1965' '92']\n",
-      " ['1940' '91']\n",
+      " ['1974' '92']\n",
+      " ['1931' '91']\n",
       " ['1917' '91']\n",
       " ['1964' '91']\n",
-      " ['1931' '91']\n",
+      " ['1940' '91']\n",
       " ['2004' '90']\n",
       " ['2001' '90']\n",
       " ['1926' '89']\n",
@@ -466,27 +501,27 @@
       " ['2000' '88']\n",
       " ['1945' '88']\n",
       " ['1938' '87']\n",
-      " ['2008' '87']\n",
-      " ['1969' '87']\n",
       " ['1928' '87']\n",
-      " ['2006' '86']\n",
-      " ['1997' '86']\n",
+      " ['1969' '87']\n",
+      " ['2008' '87']\n",
       " ['1957' '86']\n",
+      " ['1997' '86']\n",
+      " ['2006' '86']\n",
       " ['1994' '85']\n",
-      " ['1959' '84']\n",
       " ['1918' '84']\n",
+      " ['1959' '84']\n",
       " ['1981' '83']\n",
-      " ['1936' '81']\n",
       " ['1987' '81']\n",
-      " ['1913' '81']\n",
       " ['1916' '81']\n",
+      " ['1936' '81']\n",
+      " ['1913' '81']\n",
       " ['1986' '80']\n",
       " ['1980' '80']\n",
       " ['1992' '79']\n",
       " ['1996' '79']\n",
       " ['1984' '78']\n",
-      " ['1942' '78']\n",
       " ['1944' '78']\n",
+      " ['1942' '78']\n",
       " ['1947' '77']\n",
       " ['1923' '76']\n",
       " ['1978' '75']\n",
@@ -504,50 +539,15 @@
       " ['1911' '65']\n",
       " ['1995' '64']\n",
       " ['2020' '63']\n",
-      " ['2010' '61']\n",
       " ['1933' '61']\n",
+      " ['2010' '61']\n",
       " ['2005' '59']\n",
       " ['2011' '58']\n",
       " ['1915' '54']\n",
       " ['1912' '52']\n",
       " ['2013' '45']\n",
       " ['1909' '44']\n",
-      " ['1953' '2']\n",
-      " ['2016' '137']\n",
-      " ['2015' '120']\n",
-      " ['1943' '117']\n",
-      " ['1948' '117']\n",
-      " ['1939' '116']\n",
-      " ['1932' '115']\n",
-      " ['1975' '113']\n",
-      " ['1976' '112']\n",
-      " ['1921' '111']\n",
-      " ['1941' '111']\n",
-      " ['1998' '111']\n",
-      " ['2017' '110']\n",
-      " ['1949' '110']\n",
-      " ['1999' '109']\n",
-      " ['1977' '109']\n",
-      " ['1937' '108']\n",
-      " ['2003' '108']\n",
-      " ['1970' '108']\n",
-      " ['1920' '107']\n",
-      " ['2018' '106']\n",
-      " ['1930' '106']\n",
-      " ['1988' '104']\n",
-      " ['1919' '104']\n",
-      " ['1968' '104']\n",
-      " ['1983' '103']\n",
-      " ['1967' '103']\n",
-      " ['1982' '102']\n",
-      " ['2019' '102']\n",
-      " ['1963' '102']\n",
-      " ['1955' '102']\n",
-      " ['1946' '101']\n",
-      " ['1954' '101']\n",
-      " ['2002' '100']\n",
-      " ['1991' '100']\n",
-      " ['1966' '100']]\n"
+      " ['1953' '2']]\n"
      ]
     }
    ],
@@ -569,7 +569,8 @@
     "    result_list.append([year,count])\n",
     "\n",
     "result = np.array(result_list)\n",
-    "result = result[np.argsort(result[:,1])[::-1]]\n",
+    "count = result[:,1].astype(float)\n",
+    "result = result[np.argsort(count)[::-1]]\n",
     "print(result)"
    ]
   }
