--- a/Python/Python_data_science/Numpy06; numpy for statistic.ipynb
+++ b/Python/Python_data_science/Numpy06; numpy for statistic.ipynb
@@ -276,8 +276,8 @@
    "source": [
     "### samling\n",
     "- 주어진 1차원 배열 혹은 정수로 부터 랜덤 추출\n",
-    "- 주어진 1차원 ndarray로 부터 랜덤으로 샘플링\n",
-    "- 정수가 주어진 경우, np.arange(해당숫자)로 간주\n",
+    "    - 1차원 ndarray로 부터 랜덤으로 샘플링\n",
+    "    - 정수가 주어진 경우, np.arange(해당숫자)로 간주\n",
     "- np.random.choice(array,size,replace,p)"
    ]
   },
@@ -429,154 +429,6 @@
     "print(random_int)\n",
     "np.bincount(random_int,minlength=21)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### where"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 실습"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1907.10.1,108,13.5,7.9,20.7' '1907.10.2,108,16.2,7.9,22'\n",
-      " '1907.10.3,108,16.2,13.1,21.3' ... '2021.8.24,108,23.4,21.1,26.4'\n",
-      " '2021.8.25,108,25,23.5,27.3' ',,,,']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 이렇게 불러오면 리스트 형식이여서 좀 별로다\n",
-    "row_data = np.loadtxt('/Users/iganghui/TIL/Python/Python_data_science/Data/weather.csv',dtype='U',skiprows=1)\n",
-    "print(row_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 서울의 최고기온이 가장 높았던 날짜 및 최고기온을 출력하다면?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "header : ['\\ufeff날짜', '지점', '평균기온(℃)', '최저기온(℃)', '최고기온(℃)']\n",
-      "[['1915.1.13' '108' '-19.2' '-21.3' '-16.3']\n",
-      " ['1931.1.11' '108' '-17.4' '-22.5' '-14.7']\n",
-      " ['1915.1.14' '108' '-18' '-21.3' '-13.8']\n",
-      " ...\n",
-      " ['2018.7.31' '108' '32.6' '27.8' '38.3']\n",
-      " ['1994.7.24' '108' '33.1' '28.1' '38.4']\n",
-      " ['2018.8.1' '108' '33.6' '27.8' '39.6']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import csv\n",
-    "file = open('/Users/iganghui/TIL/Python/Python_data_science/Data/weather.csv','r')\n",
-    "rows = csv.reader(file,delimiter=',',)\n",
-    "# for row in rows:\n",
-    "#     print(row)\n",
-    "header= next(rows) # header만 빼놓을수 있다\n",
-    "print('header :',header)\n",
-    "weather_data = []\n",
-    "for row in rows:\n",
-    "    weather_data.append(row)\n",
-    "file.close()\n",
-    "\n",
-    "weather_np = np.array(weather_data)\n",
-    "highest_temp = weather_np[:,4]\n",
-    "highest_temp= highest_temp.astype(float)\n",
-    "print(weather_np[np.argsort(highest_temp)])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['1941.2.12' '108' '-3.3' '-7.8' '-0.1']\n",
-      " ['1934.3.1' '108' '-3.6' '-6.6' '-0.1']\n",
-      " ['1912.11.20' '108' '-3.6' '-6.6' '-0.1']\n",
-      " ...\n",
-      " ['1950.3.16' '108' '3.2' '-2.7' '9.9']\n",
-      " ['1995.2.11' '108' '3.6' '-1' '9.9']\n",
-      " ['2000.1.1' '108' '5.5' '1.8' '9.9']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(weather_np[np.argsort(highest_temp)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
