--- a/Python/Python_data_science/Pandas01; Series, Series creation and calculation.ipynb
+++ b/Python/Python_data_science/Pandas01; Series, Series creation and calculation.ipynb
@@ -218,6 +218,7 @@
    "metadata": {},
    "source": [
     "### Series creation\n",
+    "#### Series 차원에서 key값은 index다\n",
     "1. only data\n",
     "2. dict를 활용한 creation\n",
     "    - dict의 키가 index를 지칭하게 된다\n",
