--- a/Python/Python_data_science/Pandas02; DataFrame, DataFrame creation and calculation.ipynb
+++ b/Python/Python_data_science/Pandas02; DataFrame, DataFrame creation and calculation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0b673c5a",
+   "id": "cd2f20fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c06c41e",
+   "id": "b8d6055e",
    "metadata": {},
    "source": [
     "### DataFrame\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e7a74a5c",
+   "id": "e98f9a0c",
    "metadata": {},
    "outputs": [
     {
@@ -92,16 +92,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e42a0ab4",
+   "id": "e0f1cce1",
    "metadata": {},
    "source": [
-    "- colums(열 인덱스) index(행 인덱스)를 지정해줄수도 있다"
+    "- colums(열 인덱스) index(행 인덱스)를 지정해줄수도 있다\n",
+    "- 지정해주지 않으면 자동으로 0-based 인덱스가 생성된다"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "aaa1071c",
+   "execution_count": 54,
+   "id": "2dfb76dd",
    "metadata": {},
    "outputs": [
     {
@@ -156,18 +157,87 @@
        "오후   5   6   7   8"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# column index 둘다 명시\n",
     "pd.DataFrame([[1,2,3,4],[5,6,7,8]],columns = ['서울','부산','경기','대전'],index=['오전','오후'])"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "af2725e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  1  2  3\n",
+       "0  1  2  3  4\n",
+       "1  5  6  7  8"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 0-based 인덱스가 column 과 index에 모두 생성됨\n",
+    "pd.DataFrame([[1,2,3,4],[5,6,7,8]])"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5bce1007",
+   "id": "c2444b0f",
    "metadata": {},
    "source": [
     "- dtype도 지정해줄수 있다\n",
@@ -178,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c83a3e83",
+   "id": "41030ac3",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bfe9911c",
+   "id": "ab2f40b7",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6e65cff2",
+   "id": "d718b40e",
    "metadata": {},
    "outputs": [
     {
@@ -378,9 +448,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a107465",
+   "metadata": {},
+   "source": [
+    "### DataFrame의 유용한 속성들 \n",
+    "- 하나 유이할건 values는 ndarray 형식으로 값들을 돌려준다"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4eebadf8",
+   "execution_count": 55,
+   "id": "3cfa957a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,8 +475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "936bc571",
+   "execution_count": 56,
+   "id": "e2a98bd8",
    "metadata": {},
    "outputs": [
     {
@@ -421,57 +500,75 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>M</td>\n",
-       "      <td>False</td>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>34</td>\n",
-       "      <td>F</td>\n",
-       "      <td>True</td>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    0  1      2\n",
-       "0  20  M  False\n",
-       "1  34  F   True"
+       "    서울  부산  경기  대전\n",
+       "오전   1   2   3   4\n",
+       "오후   5   6   7   8"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (2, 4)\n",
+      "size: 8\n",
+      "ndim: 2\n",
+      "index: Index(['오전', '오후'], dtype='object')\n",
+      "columns: Index(['서울', '부산', '경기', '대전'], dtype='object')\n",
+      "values:\n",
+      " [[1 2 3 4]\n",
+      " [5 6 7 8]] <class 'numpy.ndarray'>\n"
+     ]
     }
    ],
    "source": [
-    "df01 = pd.DataFrame([[20,'M',False],[34,'F',True]]) # index 와 columns가 자동으로 숫자로 채워진다\n",
-    "display(df01)"
+    "df01 = pd.DataFrame([[1,2,3,4],[5,6,7,8]],columns = ['서울','부산','경기','대전'],index=['오전','오후'])\n",
+    "dfinfo(df01)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e6e3310",
+   "id": "f3ded735",
    "metadata": {},
    "source": [
     "### DataFrame creation\n",
+    "#### DataFrame 차원에서 key값은 columns 다\n",
     "- 더 자세하게 세부적으로 나눌수 있지만 간략하게는 다음과 같다\n",
     "    - 1차원 => column으로 들어간다\n",
     "        - 1차원 ndarray 혹은 1차원 ndarray를 구성하는 data(list,tuple,range)\n",
     "        - 단일 Series 혹은 Series를 구성하는 data (list,tuple,range,ndarray)\n",
-    "    - 2차원\n",
+    "    - 2차원 => row 단위로 들어간다\n",
     "        - [{'key1':value1, 'key2':value2,,,},{'key1':value1, 'key2':value2,,,}]\n",
     "        - 2차원 데이터 혹은 ndarray를 구성하는 데이터\n",
-    "    - dict\n",
+    "    - dict => key값에 해당하는 데이터가 하나의 column으로 들어간다\n",
     "        - {'key1':Series,'key2':Series,,}\n",
     "        - {'key1':data,'key2':data,,} Series를 구성하는 data(list,tuple,range)"
    ]
@@ -479,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "fe0f7e6b",
+   "id": "dab5dbcd",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c195cbdc",
+   "id": "515116a3",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "3fd0f69e",
+   "id": "03fe67d9",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4d19d0f6",
+   "id": "dcb0548d",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cec7fc0",
+   "id": "ae965ed2",
    "metadata": {},
    "source": [
     "- list of dict에서 일부 키가 누락되더라도 알아서 NaN으로 생성된다"
@@ -906,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ff164501",
+   "id": "c990046a",
    "metadata": {},
    "outputs": [
     {
@@ -971,12 +1068,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dcffbc81",
+   "execution_count": 48,
+   "id": "9c0b8c53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>population</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>KOR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
+       "      <td>JPN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>300</td>\n",
+       "      <td>CHN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   population country\n",
+       "0         100     KOR\n",
+       "1         200     JPN\n",
+       "2         300     CHN"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3차"
+    "# 딕셔너리 형식 \n",
+    "pd.DataFrame({'population':[100,200,300],'country':['KOR','JPN','CHN']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d95ff6a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>population</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>KOR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
+       "      <td>JPN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>300</td>\n",
+       "      <td>CHN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>400</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   population country\n",
+       "0         100     KOR\n",
+       "1         200     JPN\n",
+       "2         300     CHN\n",
+       "3         400     USA"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 딕셔너리 형식 (가장 정형화된)\n",
+    "population = pd.Series([100,200,300,400])\n",
+    "country = pd.Series(['KOR','JPN','CHN','USA'])\n",
+    "pd.DataFrame({'population':population,'country':country})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f3d0c14",
+   "metadata": {},
+   "source": [
+    "- 아래와 같이 입력하면 결국 2차원 데이터로 인식해서 row단위로 들어가게 된다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "0b8c3cb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>300</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KOR</td>\n",
+       "      <td>JPN</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0    1    2    3\n",
+       "0  100  200  300  400\n",
+       "1  KOR  JPN  CHN  USA"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population = pd.Series([100,200,300,400])\n",
+    "country = pd.Series(['KOR','JPN','CHN','USA'])\n",
+    "pd.DataFrame([population,country])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "786a1dcf",
+   "metadata": {},
+   "source": [
+    "### DataFrame 연산"
    ]
   }
  ],
