--- a/Python/Python_data_science/pd_01.ipynb
+++ b/Python/Python_data_science/pd_01.ipynb
@@ -1446,25 +1446,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>feature</th>\n",
+       "      <th>2021</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9910293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1203948</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "index\n",
-       "0    9910293\n",
-       "3    1203948\n",
-       "Name: 2021, dtype: int64"
+       "feature     2021\n",
+       "index           \n",
+       "0        9910293\n",
+       "3        1203948"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pop_df['2021'][[0,3]]"
+    "pop_df['2021'][[0,3]]\n",
+    "pop_df.loc[[0,3],['2021']]"
    ]
   },
   {
