--- a/Python/Python_data_science/Pandas03; indexing, slicing, update, append, delete.ipynb
+++ b/Python/Python_data_science/Pandas03; indexing, slicing, update, append, delete.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0540ef50",
+   "id": "96bad0ea",
    "metadata": {},
    "source": [
     "## Pandas03; indexing, slicing, update, append, delete "
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7f019a8d",
+   "id": "ebe03aad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8fbc050",
+   "id": "21d04c6e",
    "metadata": {},
    "source": [
     "### Series\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "af91d63e",
+   "id": "b3ca9fcd",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dbdda7f",
+   "id": "4106135b",
    "metadata": {},
    "source": [
     "- 1. indexing"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "072adbbf",
+   "id": "b4bf54e5",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b777afe",
+   "id": "075f9e8a",
    "metadata": {},
    "source": [
     "- 2. slicing \n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e49e5690",
+   "id": "743d8103",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6df8285a",
+   "id": "1a49b109",
    "metadata": {},
    "source": [
     "- 3. masking(boolean indexing) "
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "30ac61af",
+   "id": "6fe3fde6",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de99378f",
+   "id": "acea8f34",
    "metadata": {},
    "source": [
     "- 4. fancy indexing\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "316a79d2",
+   "id": "ef1ccf54",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d0b324e",
+   "id": "9bcfe0e1",
    "metadata": {},
    "source": [
     "#### 만약에 암묵적 인덱스와 명시적 인덱스가 같으면?"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7ba4ac81",
+   "id": "ebc7e100",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3feb3d24",
+   "id": "a6ea0ab4",
    "metadata": {},
    "source": [
     "### Indexer\n",
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e19a8c4e",
+   "id": "cdcbca6c",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ffe28c32",
+   "id": "505d2097",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee303079",
+   "id": "8a03ae9d",
    "metadata": {},
    "source": [
     "### DataFrame\n",
@@ -282,12 +282,601 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43d93fc1",
+   "metadata": {},
+   "source": [
+    "#### 1.indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "99d7321f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기  대전\n",
+       "오전   1   2   3   4\n",
+       "오후   5   6   7   8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df01=pd.DataFrame([[1,2,3,4],[5,6,7,8]],columns = ['서울','부산','경기','대전'],index=['오전','오후'])\n",
+    "display(df01)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "706909ee",
+   "id": "1f923531",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# key error\n",
+    "df01[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "28339a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "오전    1\n",
+       "오후    5\n",
+       "Name: 서울, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df01['서울']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "fc9da597",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "오전    1\n",
+       "오후    5\n",
+       "Name: 서울, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 파이썬에서 그렇게 추천하지는 않는다\n",
+    "# 속성이랑 겹칠수 있기 때문\n",
+    "df01.서울"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3c691e52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울\n",
+       "오전   1\n",
+       "오후   5"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df의 형태를 유지시키고 싶을때\n",
+    "df01[['서울']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45ecbf36",
+   "metadata": {},
+   "source": [
+    "#### 2.slicing => slicing은 row를 기준으로 진행된다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ae186aac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기  대전\n",
+       "오전   1   2   3   4"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df01[0:1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5e0bdab",
+   "metadata": {},
+   "source": [
+    "- 2차원 배열 => numpy에서 사용했던 2차원 배열 문법은 없다고 생각하자\n",
+    "- indexer (iloc,loc,ix)를 사용하면 가능하다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09a93973",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# key error\n",
+    "df01[0,0]\n",
+    "# 행 열이 아닌 multiindex로 인식한다\n",
+    "df01['오전','경기도']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af711e0d",
+   "metadata": {},
+   "source": [
+    "#### 3.indexer \n",
+    "- 당연히 masking과 facny indexing 도 가능하다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "4ddb43d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "오전    1\n",
+       "Name: 서울, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "서울    1\n",
+       "Name: 오전, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울\n",
+       "오전   1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 2차원 인덱싱 가능\n",
+    "# return type에 유념하자\n",
+    "\n",
+    "display(df01.iloc[0,0])\n",
+    "\n",
+    "display(df01.iloc[[0],0])\n",
+    "\n",
+    "display(df01.iloc[0,[0]])\n",
+    "\n",
+    "display(df01.iloc[[0],[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "7fe13049",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "오전    1\n",
+       "Name: 서울, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "서울    1\n",
+       "Name: 오전, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기\n",
+       "오전   1   2   3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 2차원 슬라이싱 가능\n",
+    "# return type에 유념하자\n",
+    "display(df01.loc['오전','서울'])\n",
+    "display(df01.loc[['오전'],'서울'])\n",
+    "display(df01.loc['오전',['서울']])\n",
+    "display(df01.loc[['오전'],'서울':'경기'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "b9333d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기\n",
+       "오전   1   2   3\n",
+       "오후   5   6   7"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fancy indexing\n",
+    "# numpy에서는 이게 안됬었다 => 그때는 np.ix_ 사용햇었다\n",
+    "df01.iloc[[0,1],[0,1,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "e76ffc1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기  대전\n",
+       "오후   5   6   7   8"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# masking\n",
+    "df01.loc[df01['서울']>1,:]"
+   ]
   }
  ],
  "metadata": {
